fix: Align text to the left on key card
Close #8

--- a/src/app/modules/project/project-item/project-item.component.scss
+++ b/src/app/modules/project/project-item/project-item.component.scss
@@ -65,6 +65,11 @@
       justify-content: space-between;
     }
 
+    &_key-name {
+      width: 100%;
+      text-align: left;
+    }
+
     &_key-input {
       width: 100%;
     }
